welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:9: error: reassignment to val
 		i=indice_valeur_max
                 ^